# cardano-control-panel

./: .gitignore  LICENSE  README.md  cardano-control-panel.cabal  flake.nix  plutus-starter-template.cabal  stack.yaml
app/: Main.hs
src/Plutus/Contract/: Example.hs
test/: Spec.hs
